# volante

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: pages.yml
cache/: projects.json
deploy/: space-README.md
docs/: DECISIONS.md  waitlist-google-sheet-setup.md
docs/legal/: README.md  entity-formation-checklist.md  insurance-broker-outreach.md  miami-dade-ch31-inquiry.md
docs/research/: market-brief.md
site/: en.html  estimator.js  index.html  pedir.html  privacy.html  request.html  robots.txt  sitemap.xml  styles.css  terms.html
src/volante/: __init__.py  db.py  i18n.py  main.py
src/volante/static/: styles.css
src/volante/templates/: base.html  index.html
tests/: test_smoke.py  test_waitlist.py
