[project]
name = "volante"
version = "0.0.1"
description = "Miami bilingual 'we drive you AND your car home' sober-ride service — flat-fee, no-membership designated-driver marketplace (solo driver + hybrid exit)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Daniel Regalado" }]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/volante"]

[dependency-groups]
dev = ["ruff>=0.6", "pre-commit>=3.7", "pytest>=8.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
